--- a/Cierge/appsettings.json
+++ b/Cierge/appsettings.json
@@ -22,6 +22,8 @@
   },
   "Cierge": {
     "RsaSigningKeyJsonPath": "/run/secrets/rsa_signing_key.json",
+    "Issuer": "",
+    "RequireHttps": "",
     "AppName": "Sample App",
     "AppUrl": "http://example.com",
     "Audience": "demo-resource-server",
