--- a/Cierge/appsettings.json
+++ b/Cierge/appsettings.json
@@ -18,7 +18,8 @@
     "Password": "",
     "Ssl": true,
     "Port": 465,
-    "From": ""
+    "From": "",
+    "RandomizeFrom": false
   },
   "Cierge": {
     "RsaSigningKeyJsonPath": "/run/secrets/rsa_signing_key.json",
