--- a/Cierge/Cierge.csproj
+++ b/Cierge/Cierge.csproj
@@ -13,9 +13,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="AspNet.Security.OAuth.Validation" Version="2.0.0-*" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
-    <PackageReference Include="OpenIddict" Version="2.0.0-*" />
-    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="2.0.0-*" />
-    <PackageReference Include="OpenIddict.Mvc" Version="2.0.0-*" />
+    <PackageReference Include="OpenIddict" Version="2.0.0-rc1-final" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="2.0.0-rc1-final" />
+    <PackageReference Include="OpenIddict.Mvc" Version="2.0.0-rc1-final" />
   </ItemGroup>
 
   <ItemGroup>
