--- a/Cierge/appsettings.json
+++ b/Cierge/appsettings.json
@@ -22,6 +22,7 @@
     "RandomizeFrom": false
   },
   "Cierge": {
+    "DatabaseProvider": "mssql",
     "RsaSigningKeyJsonPath": "/run/secrets/rsa_signing_key.json",
     "Issuer": "",
     "RequireHttps": "",
