Default to PostgreSQL and add clarifying comments; fix exception message

--- a/Cierge/appsettings.json
+++ b/Cierge/appsettings.json
@@ -22,7 +22,7 @@
     "RandomizeFrom": false
   },
   "Cierge": {
-    "DatabaseProvider": "mssql",
+    "DatabaseProvider": "PostgreSQL",
     "RsaSigningKeyJsonPath": "/run/secrets/rsa_signing_key.json",
     "Issuer": "",
     "RequireHttps": "",
